selfhost/test/typechecker/bindingdecl_error_type_mismatch_option.2.out
Error at %FILE_NAME%:1:14
Type mismatch
  |  val a: Int = None
                  ^
Expected: Int
but instead found: <unknown>?
